Data_on_Kubernetes[DOK]/Kubernetes/Gateway_API/gateway_class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
    name: external-lb 
spec:
    controllerName: lb.acme.io/gateway-controller
